[tool.poetry]
name = "chess-pygame"
version = "0.1.0"
description = ""
authors = ["ovvosystem <ovvo.system@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_pygame"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
